release: maven cli action